update(機能追加&改修)
facebookアカウントによるログイン機能を追加
OAuthログインボタンの文言を修正

--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -111,7 +111,7 @@ ja:
     sessions:
       already_signed_out: 既にログアウト済みです。
       new:
-        sign_in: ログイン
+        sign_in: メールアドレスでログイン
       signed_in: ログインしました。
       signed_out: ログアウトしました。
     shared:
@@ -120,8 +120,8 @@ ja:
         didn_t_receive_confirmation_instructions: アカウント確認のメールを受け取っていませんか?
         didn_t_receive_unlock_instructions: アカウントの凍結解除方法のメールを受け取っていませんか?
         forgot_your_password: パスワードを忘れましたか?
-        sign_in: ログイン
-        sign_in_with_provider: "%{provider}でログイン"
+        sign_in: メールアドレスでログイン
+        sign_in_with_provider: "%{provider}アカウントでログイン"
         sign_up: アカウント登録
       minimum_password_length: "（%{count}字以上）"
     unlocks:
