--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -111,7 +111,7 @@ ja:
     sessions:
       already_signed_out: 既にログアウト済みです。
       new:
-        sign_in: メールアドレスでログイン
+        sign_in: ログイン
       signed_in: ログインしました。
       signed_out: ログアウトしました。
     shared:
